# karen

./: .gitignore  Dockerfile  LICENSE  README.md  VERIFICATION.md  docker-compose.yml  main.py  memory.py  orchestrator.py  pyproject.toml  requirements.txt  run_tests.py  tools.py
.cursor/plans/: jarvis_agentic_orchestration_core_d71485bf.plan.md  jarvis_jetson_implementation_2e9bf9f7.plan.md
.cursor/rules/: jarvis-automation.mdc  jarvis-python.mdc
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audio/: __init__.py  bluetooth.py  input.py  output.py
config/: prompts.py  settings.py
docs/: SETUP_GUIDE.md  SOCIAL_LAUNCH_KIT.md  jetson-ai-lab-models.md
gui/: __init__.py  overlay.py
llm/: context.py  ollama_client.py
models/: .gitkeep
pwa/: package-lock.json  package.json
scripts/: bootstrap_models.py  bootstrap_models.sh  configure-ollama-systemd.sh  export_depth_engine.sh  export_yolo_engine.sh  inspect-ollama-config.sh  install-cuda-path.sh  install-cusparselt.sh  install-ollama.sh  install-pytorch-cuda-nvidia.sh  prepare-ollama-gpu.sh  remove-ollama.sh  start-ollama.sh
server/: app.py  bridge.py  streaming.py
tests/: conftest.py
tests/e2e/: test_audio_e2e.py  (+7 more)
utils/: logging_config.py  power.py  reminders.py
vision/: camera.py  depth.py  detector_mediapipe.py  detector_yolo.py  ego_motion.py  flow.py  perception.py  scene.py  shared.py  threat.py  tracker.py  trajectory.py  visualize.py  vitals.py
voice/: stt.py  tts.py  wakeword.py
(+30 files in other folders)
