[project]
name = "jarvis"
version = "0.1.0"
description = "Offline voice assistant on Jetson Orin Nano 8GB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "piper-tts>=1.2.0",
    "faster-whisper>=1.0.0",
    "openwakeword>=0.6.0",
    "opencv-python-headless>=4.8.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "ultralytics>=8.2.0",
    "mediapipe>=0.10.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "Pillow>=10.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["config", "audio", "voice", "llm", "vision", "utils", "main.py", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests (may use real hardware)",
    "unit: unit tests (mocked)",
]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
